adds upload button

--- a/details.html
+++ b/details.html
@@ -78,8 +78,13 @@
                 </div>
 
                 <div class="custom-form-control">
-                  <h4 class="text-light-2">DATE</h4>
-                  <input class="custom-input" id="example" type="date " />
+                  <h4 class="text-light-2">DATE OF BIRTH</h4>
+                  <input
+                    class="custom-input"
+                    id="example"
+                    type="date"
+                    placeholder="DD/MM/YYYY"
+                  />
                 </div>
               </div>
 
