--- a/uploader.html
+++ b/uploader.html
@@ -96,6 +96,17 @@
                 </div>
               </div>
             </div>
+
+            <div class="file-uploader">
+              <input type="file" name="" id="" />
+              <h4 class="fw-normal">
+                Darg and drop files here or
+                <span class="text-yellow">browse</span>
+              </h4>
+            </div>
+            <h4 class="text-end text-light-2 mt-2">
+              Only Jpg and png with maximum file size 2Mb
+            </h4>
           </div>
         </div>
       </div>
