fixes text under upload button

--- a/uploader.html
+++ b/uploader.html
@@ -104,7 +104,7 @@
                 <span class="text-yellow">browse</span>
               </h4>
             </div>
-            <h4 class="text-end text-light-2 mt-2">
+            <h4 class="text-end text-light-2 mt-2 pe-3">
               Only Jpg and png with maximum file size 2Mb
             </h4>
           </div>
