fixes upload button

--- a/uploader.html
+++ b/uploader.html
@@ -98,7 +98,8 @@
             </div>
 
             <div class="file-uploader">
-              <input type="file" name="" id="" />
+              <label for="file-upload"></label>
+              <input type="file" name="" id="file-upload" />
               <h4 class="fw-normal">
                 Darg and drop files here or
                 <span class="text-yellow">browse</span>
