--- a/profile.html
+++ b/profile.html
@@ -472,7 +472,7 @@
                   />
                 </div>
 
-                <div class="custom-form-control">
+                <div class="custom-form-control mt-3">
                   <h4 class="text-light-2">DATE</h4>
                   <input
                     class="custom-input"
