fixes text in details page

--- a/details.html
+++ b/details.html
@@ -111,7 +111,7 @@
                 </div>
 
                 <div class="custom-form-control">
-                  <h4 class="text-light-2">NAME</h4>
+                  <h4 class="text-light-2">GENDER</h4>
                   <div class="radio-container">
                     <label class="custom-radio"
                       >Male
