--- a/profile.html
+++ b/profile.html
@@ -472,13 +472,23 @@
                   />
                 </div>
 
-                <div class="custom-form-control mt-3">
-                  <h4 class="text-light-2">DATE</h4>
+                <div class="custom-form-control mt-4">
+                  <h4 class="text-light-2">DATE OF BIRTH</h4>
                   <input
                     class="custom-input"
                     id="example"
                     type="date"
                     placeholder="DD/MM/YYYY"
+                  />
+                </div>
+
+                <div class="custom-form-control mt-4">
+                  <h4 class="text-light-2">MOBILE</h4>
+                  <input
+                    class="custom-input"
+                    type="number"
+                    disabled
+                    value="8130482336"
                   />
                 </div>
               </div>
